# MinersGate

./: CMakeLists.txt  README.md
assets/shaders/: vertex.vert
src/: main.cpp
src/engine/client/: CClient.cpp  CClient.hpp  CGraphics.cpp  CGraphics.hpp  CIO.cpp  CIO.hpp
src/engine/client/graphics/: CQuad.cpp  CQuad.hpp  CTriangle.cpp  CTriangle.hpp  IDrawable.hpp
src/game/: CGameClient.cpp  CGameClient.hpp
